update docu
