# storage/api-docs/api-docs.json
@@ -183,7 +183,7 @@
                 }
             }
         },
-        "/communities/collect-control": {
+        "/communities/collect-control/{alias?}/{export?}": {
             "get": {
                 "tags": [
                     "Community"
@@ -202,6 +202,10 @@
                                     },
                                     "uuid_community": {
                                         "description": "",
+                                        "type": "string"
+                                    },
+                                    "export": {
+                                        "description": "export",
                                         "type": "string"
                                     }
                                 },
